--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments ;; head"></head>
+<head th:replace="fragments :: head"></head>
 <body class="container">
     <h1 th:text="${title}">Default Title</h1>
     <nav th:replace="fragments :: navigation"></nav>
     <ul class="list">
         <li th:each="menu : ${menus}">
-            <a th:href="'/menu/view' + ${menu.id}" th:text="${menu.name}"></a>
+            <a th:href="'/menu/view/' + ${menu.id}" th:text="${menu.name}"></a>
         </li>
     </ul>
     <a href="/menu/add">Add Menu</a>
